# IUM_project-delivery_time_prediction

./: .gitignore  README.md  controllers.py  pyproject.toml
data/raw/: deliveries.jsonl  users.jsonl
delivery_time/data/: make_dataset.py  preprocessing.py  process_data.py
delivery_time/models/: __init__.py  predict_model_naive.py  predict_model_regressor.py  train_model_naive.py  train_model_regressor.py
delivery_time/validation/: simulate_traffic.py  test_acc.py
models/: naive.csv
models/naive/: naive_model.csv
models/regressor/: regressor_model.pt
notebooks/: Example Notebook.ipynb
tests/: test_make_dataset.py
