[tool.poetry]
name = "delivery_time"
version = "0.0.1"
description = ""
authors = ["Aleksander Garlikowski <aleksander.garlikowski.stud@pw.edu.pl>", "Cezary Moczulski <cezary.moczulski.stud@pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
